--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "angular-material-source",
+  "name": "@salesflare/angular-material",
   "version": "1.1.10-hotfix.1",
   "description": "The AngularJS Material project is an implementation of Material Design in AngularJS. This project provides a set of reusable, well-tested, and accessible Material Design UI components. AngularJS Material is supported internally at Google by the AngularJS, Material Design UX and other product teams.",
   "keywords": "client-side, browser, material, material-design, design, angularjs, angular.js, css, components, google",
   "homepage": "https://material.angularjs.org",
-  "bugs": "https://github.com/angular/material/issues",
+  "bugs": "https://github.com/Salesflare/angular/material/issues",
   "license": "MIT",
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/angular/material/blob/master/LICENSE"
+      "url": "https://github.com/Salesflare/material/blob/master/LICENSE"
     }
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/angular/material.git"
+    "url": "https://github.com/Salesflare/material"
   },
-  "private": true,
   "style": "./dist/angular-material.css",
   "scss": "./dist/angular-material.scss",
   "devDependencies": {
